--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"@types/react-transition-group": "^4.4.5",
+		"gsap": "^3.11.4",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
+		"react-animate-height": "^3.1.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.6.2",
 		"react-scripts": "5.0.1",
