--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
-		"react-animate-height": "^3.1.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.6.2",
 		"react-scripts": "5.0.1",
 		"react-transition-group": "^4.4.5",
 		"sass": "^1.57.1",
 		"sort-by": "^1.2.0",
+		"swiper": "^8.4.5",
 		"typescript": "^4.4.2",
 		"web-vitals": "^2.1.0"
 	},
