--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"@types/react-transition-group": "^4.4.5",
+		"axios": "^1.4.0",
 		"firebase": "^9.15.0",
+		"jsonwebtoken": "^9.0.0",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
