--- a/package.json
+++ b/package.json
@@ -13,13 +13,10 @@
 		"@types/react-dom": "^18.0.0",
 		"@types/react-transition-group": "^4.4.5",
 		"axios": "^1.4.0",
-		"firebase": "^9.15.0",
-		"jsonwebtoken": "^9.0.0",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-firebase-hooks": "^5.1.1",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.6.2",
 		"react-scripts": "5.0.1",
@@ -30,6 +27,8 @@
 		"web-vitals": "^2.1.0"
 	},
 	"devDependencies": {
+		"@types/redux-logger": "^3.0.9",
+		"@types/redux-thunk": "^2.1.0",
 		"sass": "^1.57.1"
 	},
 	"scripts": {
