--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "wildcherry-react",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://nicanev.github.io/wildcherry",
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.9.1",
 		"@testing-library/jest-dom": "^5.14.1",
@@ -29,13 +30,16 @@
 	"devDependencies": {
 		"@types/redux-logger": "^3.0.9",
 		"@types/redux-thunk": "^2.1.0",
+		"gh-pages": "^5.0.0",
 		"sass": "^1.57.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
